[package]
name = "tangleshoot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
] }
